<resources>
    <string name="app_name">Popular Movies</string>
    <string name="extra_movie_data">EXTRA_MOVIE_DATA</string>
    <string name="intent_coming_from">INTENT_COMING_FROM</string>
    <string name="favorite_fragment">favorites_fragment</string>
    <string name="main_movies_fragment">main_movies_fragment</string>
    <string name="error_message">Sorry an error occurred. Please try again later.</string>
    <string name="error_message_favorites">Sorry either an error occurred, or you have no favorite movies.</string>
    <string name="error_message_no_network">Sorry. Please check your connection</string>
    <string name="contentDescription">Movie poster image.</string>
    <string name="menu_item_popular">Popular</string>
    <string name="popular_key">popular</string>
    <string name="menu_item_top_rated">Top Rated</string>
    <string name="top_rated_key">top_rated</string>
    <string name="rating_out_of_ten">/10</string>
    <string name="saved_movie_sort">MOVIE_SORT</string>
    <string name="paging_name">PAGING_ID</string>
    <string name="sort_by_key" translatable="false">sort_by</string>

    <string name="movie_list" translatable="false">movie_list</string>

    // CONTENT DESCRIPTIONS
    <string name="background_image_cd">Background Image of Movie</string>
    <string name="star_image_cd">Image of Star representing popularity</string>
    <string name="favorite_button_cd">Thumbs up image to favorite a movie</string>
    <string name="money_image_cd">Image of dollar sign representing budget and revenue</string>
    <string name="arrow_image_cd">Image of arrow sign representing trailer</string>

    <string name="movie_image_cd">Image of movie poster</string>

    <string name="all_movies_json_result" translatable="false">all_movies</string>
    <string name="single_movie_json_result" translatable="false">single_movie</string>
    <string name="movie_trailers_json_result" translatable="false">movie_trailers</string>
    <string name="movie_reviews_json_result" translatable="false">movie_reviews</string>

    <string name="settings">Settings</string>
    <string name="sort_title">Sort By :</string>

    <string name="movie_id">movie_id</string>


    <!--Retrieve Reviews Listener -->
    <!--<string name="reviews_retriever_listener">retrieve_reviews_listener</string>-->


    <!--DB UTILS INTENT INPUT -->
    <string name="bundleContentValues">bundle_content_values</string>
    <string name="endpoint_uri">endpoint_uri</string>


    <string name="budget_label">B:</string>
    <string name="revenue_label">R:</string>

    <string name="minutes_addition"> min</string>

</resources>
