<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:id="@+id/movie_details_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusableInTouchMode="true"
        tools:context="com.android.popularmovies.Activites.MovieDetailsActivity">


        <TextView
            android:id="@+id/overview_text_view"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/money_image" />

        <TextView
            android:id="@+id/rating_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="6.1/10"
            android:textSize="15sp"
            android:paddingRight="5dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/runtime_text_view"
            app:layout_constraintLeft_toLeftOf="@+id/runtime_text_view"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="7dp" />

        <TextView
            android:id="@+id/runtime_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="120 min"
            android:textStyle="italic"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/release_date_text_view"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/release_date_text_view"
            app:layout_constraintRight_toRightOf="@+id/release_date_text_view"
            android:layout_marginStart="8dp" />


        <TextView
            android:id="@+id/release_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2017"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="88dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/genre_text_view"
            app:layout_constraintLeft_toRightOf="@+id/linearLayout"
            android:layout_marginLeft="117dp" />



        <ImageView
            android:id="@+id/background_image_view"
            android:layout_width="0dp"
            android:layout_height="202dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/background_image_cd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="33dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="145dp"
            android:layout_height="200dp"
            android:background="@color/colorAccent"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="201dp"
            android:id="@+id/linearLayout"
            android:layout_marginStart="16dp">

            <ImageView
                android:id="@+id/poster_image_view"
                android:layout_width="146dp"
                android:layout_height="200dp"
                android:contentDescription="@string/contentDescription"
                android:padding="1dp"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="53dp"
                />
        </LinearLayout>



        <ImageView
            android:id="@+id/star_image"
            android:layout_width="46dp"
            android:layout_height="39dp"
            app:srcCompat="@drawable/star_image"
            android:contentDescription="@string/star_image_cd"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintRight_toLeftOf="@+id/rating_text_view"
            android:layout_marginRight="35dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/runtime_text_view" />



        <android.support.design.widget.TabLayout
            android:id="@+id/review_trailer_sliding_tabs"
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:tabMode="fixed"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/overview_text_view" />


        <android.support.v4.view.ViewPager
            android:id="@+id/review_trailer_view_pager"
            android:layout_width="0dp"
            android:layout_height="356dp"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/review_trailer_sliding_tabs"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">

        </android.support.v4.view.ViewPager>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#99000000"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_weight="20.84"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_gravity="center_horizontal"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="0dp" />

            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/favorite_button_cd"
                app:srcCompat="@drawable/favorite_image"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="0dp" />
        </LinearLayout>

        <TextView
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/background_image_view"
            android:id="@+id/genre_text_view"
            android:textColor="#8A8A8A"
            android:gravity="right"
            android:paddingRight="2dp"
            tools:layout_editor_absoluteX="161dp" />

        <TextView
            android:id="@+id/vote_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="8277"
            android:gravity="center"
            android:textColor="#8A8A8A"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/rating_text_view"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/rating_text_view" />

        <ImageView
            android:id="@+id/money_image"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:contentDescription="@string/money_image_cd"
            app:srcCompat="@drawable/budget_icon"
            android:layout_marginLeft="1dp"
            app:layout_constraintLeft_toLeftOf="@+id/star_image"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/star_image" />

        <TextView
            android:id="@+id/budget_text_view"
            android:layout_width="55dp"
            android:layout_height="17dp"
            tools:text="100,000"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/budget_label_text_view"
            android:layout_marginLeft="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/budget_label_text_view"
            android:layout_marginTop="-1dp" />

        <TextView
            android:id="@+id/budget_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_label"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@+id/money_image"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/vote_count_text_view" />

        <TextView
            android:id="@+id/revenue_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revenue_label"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#8A8A8A"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/budget_label_text_view"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@+id/budget_label_text_view" />

        <TextView
            android:id="@+id/revenue_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="45,500"
            android:textStyle="italic"
            android:gravity="center"
            android:textColor="#8A8A8A"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/revenue_label_text_view"
            android:layout_marginLeft="5dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/revenue_label_text_view"
            android:layout_marginTop="0dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
